--- a/views/indented.ejs
+++ b/views/indented.ejs
@@ -4,6 +4,7 @@
 <head>
     <title>Diaforá Taxonomy Viewer</title>
     <link rel="icon" type="image/vnd.microsoft.icon" href="assets/favicon.ico" sizes="16x16" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" />
     <link href="/stylesheets/bootstrap.min.css" rel="stylesheet" />
     <link href="/stylesheets/selector.css" rel="stylesheet" />
     <link rel="stylesheet" href="/stylesheets/spinners.css" />
@@ -37,6 +38,8 @@
     <script src="/javascripts/sunburst-chart/sunburst-chart.js"></script>
     <script src="/javascripts/icicle-chart/icicle-chart.js"></script>
     <script src="/javascripts/indentedTreeView/indentedTree.js"></script>
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 </head>
 <script>
     var protoType = <%= query.protoType? query.protoType : 0 %>;
@@ -302,6 +305,16 @@
     <div id="differenceView" class="main_body right top">
         <div id="chart" class="sunburst"></div>
         <div id="indentedTree" class="treeContainer "></div>
+        <div class="input-group mb-3 search-diff">
+            <div class="ui-widget">
+                <input id="tags" class="form-control" placeholder="Search taxa" />
+            </div>
+            <div class="input-group-append">
+                <button id="search-btn" class="btn btn-primary search-btn" onclick="onSearch()">
+                        <i class="fas fa-search"></i>
+                    </button>
+            </div>
+        </div>
         <div id="changeDetails" class="change-details" style="display: none;">
             <div id="changeDetails" class="change-details right">
                 <div class="general-title">
