--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -613,7 +613,7 @@ input:checked+.slider_switch:before {
 .splitter {
     width: 100%;
     height: 16px;
-    background-color: firebrick;
+    background-color: darkslategray;
     display: flex;
     align-items: center;
     justify-content: center;
