--- a/views/indented.ejs
+++ b/views/indented.ejs
@@ -303,7 +303,7 @@
         <label id="treeContext" class="treeContext"></label>
     </div>
     <div id="differenceView" class="main_body right top">
-        <div id="chart" class="sunburst"></div>
+        <div id="sunburstChart" class="treeContainer  topPane"></div>
         <div id="indentedTree" class="topPane treeContainer "></div>
         <div class="input-group mb-3 search-diff">
             <div class="ui-widget">
