--- a/views/indented.ejs
+++ b/views/indented.ejs
@@ -40,9 +40,148 @@
     <script src="/javascripts/indentedTreeView/indentedTree.js"></script>
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.6.0/split.min.js"></script>
+    <script type="text/javascript" src="https://golden-layout.com/files/latest/js/goldenlayout.min.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
+    <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" />
+    <script src="/javascripts/drawTree.js"></script>
 </head>
 <script>
     var protoType = <%= query.protoType? query.protoType : 0 %>;
+    var goldeninit = false;
+    $(document).ready(function() {
+        var config = {
+            content: [{
+                type: 'column',
+                height: 80,
+                content: [{
+                    type: 'row',
+                    content: [{
+                        type: 'component',
+                        componentName: 'statistics',
+                        title: 'Statistics',
+                        componentState: {
+                            label: 'A'
+                        },
+                        width: 15,
+                        isClosable: false
+                    }, {
+                        type: 'component',
+                        componentName: 'edgeDrawing',
+                        title: 'Taxonomic Comparison',
+                        componentState: {
+                            label: 'B'
+                        },
+                        width: 50,
+                        isClosable: false
+                    }, {
+                        type: 'component',
+                        componentName: 'diffView',
+                        title: 'Taxonomic Differences',
+                        componentState: {
+                            label: 'C'
+                        },
+                        width: 35,
+                        isClosable: false
+
+                    }]
+                }, {
+                    type: 'column',
+                    content: [{
+                        type: 'component',
+                        componentName: 'changedetails',
+                        title: 'Change Details',
+                        componentState: {
+                            label: 'D'
+                        },
+                        height: 20,
+                        isClosable: false
+                    }]
+                }]
+            }]
+        };
+
+        var myLayout = new GoldenLayout(config);
+
+        myLayout.registerComponent('testComponent', function(container, componentState) {
+            container.getElement().html('<h2>' + componentState.label + '</h2>');
+        });
+
+        myLayout.registerComponent('statistics', function(container, componentState) {
+            container.getElement().html('<div id="statistics" class="collapse show left-panel">\
+                                                                            <label class="navbar-dark navbar-brand statistics-lbl">Statistics</label>\
+                                                                                <table id="table_taxon_id" class="table_stadistic"></table>\
+                                                                                <hr class="separator" />\
+                                                                                <table id="table_rank_id" class="table_stadistic"></table>\
+                                                                            </div>\
+                                                                            ');
+        });
+
+
+        myLayout.registerComponent('edgeDrawing', function(container, componentState) {
+            container.getElement().html('\
+                                                                                                         <div id="sketch-holder" class="main_body">\
+                                                                                                                                                        </div>');
+
+            container.on('resize', function() {
+                console.log('panel_resize');
+                if (typeof resizeCanvas === "function") {
+                    resizeCanvas(container.width, container.height);
+                }
+            })
+        });
+
+
+        myLayout.registerComponent('diffView', function(container, componentState) {
+            container.getElement().html(`
+                                                                                    <div id="differenceView">
+                                                                                    <div id="sunburstChart" class="treeContainer  topPane"></div>
+                                                                                    <div id="indentedTree" class="topPane treeContainer "></div>
+                                                                                    <div class="input-group mb-3 search-diff">
+                                                                                        <div class="ui-widget">
+                                                                                            <input id="tags" class="form-control" placeholder="Search taxa" />
+                                                                                        </div>
+                                                                                        <div class="input-group-append">
+                                                                                            <button id="search-btn" class="btn btn-primary search-btn" onclick="onSearch()">
+                                                                                                    <i class="fas fa-search"></i>
+                                                                                                </button>
+                                                                                        </div>
+                                                                                    </div>
+                                                                                    <div id="tooltip" style="position: fixed; display: none;z-index: 5;">
+                                                                                        <canvas id="tooltipChart" width="250" height="250"></canvas>
+                                                                                    </div>
+                                                                                </div>
+                                                                                    `);
+        });
+
+        myLayout.registerComponent('changedetails', function(container, componentState) {
+            container.getElement().html(`
+                                    <div id="changeDetailsContainer" class="main_body" style="display:none">
+                                <div id="changeDetails" class="details-table">
+                                    <div class="general-title">
+                                        <span id="change-title">Change details for: Species X</span>
+                                    </div>
+                                    <div class="tree-titles">
+                                        <div class="column">
+                                            <span id="tree1-title">tree.author +""+ tree.date</span>
+                                        </div>
+                                        <div class="column">
+                                            <span id="tree2-title">tree.author +""+ tree.date</span>
+                                        </div>
+                                    </div>
+                                    <div id="oldTaxonomy" class="old-tax"></div>
+                                    <div id="newTaxonomy" class="new-tax"></div>
+                                </div>
+                            </div>
+                                    `);
+        });
+
+
+        myLayout.on('initialised', function() {
+            goldeninit = true;
+        });
+        myLayout.init();
+    });
 </script>
 
 <body>
@@ -245,6 +384,11 @@
                             Statistics<i class="bi bi-graph-up"></i>
                         </button>
                                 </li>
+                                <li class="nav-item">
+                                    <button class="buttonsHeader" type="button" title="Toggle Differences View" onclick="toggleDifferenceView()">
+                            Differences<i class="bi bi-file-code"></i>
+                        </button>
+                                </li>
                                 <% if (query.mode !== '1') { %>
 
                                     <li class="nav-item">
@@ -268,14 +412,6 @@
                         </button>
                                     </li>
                                     <%}%>
-                                        <!-- <li class="nav-item">
-                        <button type="button" class="matrix"  onclick="onMatrixClicked()"> <img src = "/images/matrixButton.png" ></img></button>
-                        <button
-                            type="button"
-                            class="matrix"
-                            onclick="onMatrixClicked()"
-                        ></button>
-                    </li> -->
                                         <li class="nav-item">
                                             <!--Function comes from ordering menu script -->
                                             <button type="“button”" class="buttonsHeader" onclick="onExit()">
@@ -286,79 +422,24 @@
             </ul>
         </div>
     </nav>
-    <div class="main_body left top">
-        <div id="statistics" class="collapse show">
-            <label class="navbar-dark navbar-brand">Statistics</label>
-            <table id="table_taxon_id" class="table_stadistic"></table>
-            <hr class="separator" />
-            <table id="table_rank_id" class="table_stadistic"></table>
-        </div>
-    </div>
-
-    <div id="sketch-holder" class="main_body right top" style="display: none;">
-        <!-- Our sketch will go here! -->
-        <script src="/javascripts/drawTree.js"></script>
-    </div>
-    <div id="context-holder" class="main_body right top">
+    <div id="visualization-area">
+        <!-- <div id="context-holder" class="main_body right top">
         <label id="treeContext" class="treeContext"></label>
+        </div> -->
     </div>
-    <div id="differenceView" class="main_body right top">
-        <div id="sunburstChart" class="treeContainer  topPane"></div>
-        <div id="indentedTree" class="topPane treeContainer "></div>
-        <div class="input-group mb-3 search-diff">
-            <div class="ui-widget">
-                <input id="tags" class="form-control" placeholder="Search taxa" />
-            </div>
-            <div class="input-group-append">
-                <button id="search-btn" class="btn btn-primary search-btn" onclick="onSearch()">
-                        <i class="fas fa-search"></i>
-                    </button>
-            </div>
-        </div>
-        <div id="changeDetailsContainer" class="bottomPane change-details" style="display:none">
-            <div class="splitter">
-                <i class="splitterIcon bi bi-arrow-down-up"></i>
-            </div>
-            <div id="changeDetails" class="details-table">
-                <div class="general-title">
-                    <span id="change-title">Change details for: Species X</span
-                        >
-                    </div>
-                    <div class="tree-titles">
-                        <div class="column">
-                            <span id="tree1-title"
-                                >tree.author +""+ tree.date</span
-                            >
-                        </div>
-                        <div class="column">
-                            <span id="tree2-title"
-                                >tree.author +""+ tree.date</span
-                            >
-                        </div>
-                    </div>
-                    <div id="oldTaxonomy" class="old-tax"></div>
-                    <div id="newTaxonomy" class="new-tax"></div>
-                </div>
-            </div>
-            <div
-                id="tooltip"
-                style="position: fixed; display: none;z-index: 5;"
-            >
-                <canvas id="tooltipChart" width="250" height="250"></canvas>
-            </div>
-        </div>
 
-        <!-- -->
-        <div class="infoSquare">
-            <p class="infoTitle"></p>
-            <p class="infoBody"></p>
-        </div>
+    <!-- -->
+    <!-- <div class="infoSquare">
+        <p class="infoTitle"></p>
+        <p class="infoBody"></p>
+    </div> -->
 
-        <!-- -->
-    </body>
-    <div id="busyLoader" class="overlay" style="display: none;">
-        <div class="three-quarters-loader center-loader">
-            Loading...
-        </div>
+    <!-- -->
+</body>
+<div id="busyLoader" class="overlay" style="display: none;">
+    <div class="three-quarters-loader center-loader">
+        Loading...
     </div>
+</div>
+
 </html>
